@@ -1,5 +1,7 @@
 *SVN*
 
+* Add config.active_support.use_standard_json_time_format setting so that Times and Dates export to ISO 8601 dates.  [rick]
+
 * TZInfo: Removing unneeded TimezoneProxy class [Geoff Buesing]
 
 * TZInfo: Removing unneeded TimezoneIndexDefinition, since we're not including Indexes::Timezones [Geoff Buesing] 
